--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mavlink"]
 	path = mavlink
 	url = https://github.com/mavlink/mavlink
+[submodule "mavros"]
+	path = mavros
+	url = https://github.com/mavlink/mavros
